[workspace]
members = [
    "crates/bin/*",
    "crates/lib/*"
]
resolver = "3"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
blake3 = { version = "1.8.5" }
ed25519-dalek = { version = "2.2.0" }
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
futures = { version = "0.3.32" }
serde_json = { version = "1.0.150" }
serde_bytes = { version = "0.11.19" }
serde-big-array = { version = "0.5.1" }
serde_cbor = { version = "0.11.2" }
rand = { version = "0.10.1" }
anyhow = { version = "1.0.102" }
clap = { version = "4.6.1", features = ["derive"] }
base64 = { version = "0.22.1" }
base32 = { version = "0.5.1" }
hex = { version = "0.4.3" }
libloading = { version = "0.9.0" }