[package]
name = "key"
version = "0.1.0"
edition = "2024"

[dependencies]
ed25519-dalek = { workspace = true }
serde = { workspace = true }
serde_cbor = { workspace = true }
serde_bytes = { workspace = true }
rand = { workspace = true }
blake3 = { workspace = true }
base32 = { workspace = true }
base64 = { workspace = true }