[package]
name = "processor"
version = "0.1.0"
edition = "2024"

[dependencies]
transform = { path = "../transform" }
rhex = { path = "../rhex" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_cbor = { workspace = true }
anyhow = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
libloading = { workspace = true }